# engawa

./: Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
docs/: ENGAWA.md
src/: decoration.rs  dispatch.rs  effect.rs  error.rs  graph.rs  lib.rs  lisp.rs  material.rs  node.rs  pass.rs  pipeline.rs  resource.rs
tests/: compute_node.rs  decoration_matrix.rs  dispatch_recording.rs  game_extensions.rs  graph_compile.rs  graph_model.rs  graph_proptest.rs  msl_shader.rs
