[package]
name = "engawa"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
authors = ["pleme-io"]
description = "Engawa (縁側) — typed render-graph IR for pleme-io GPU consumers. Bevy-inspired render-graph design distilled to mado-shaped needs: no ECS, no game loop, no asset pipeline. Pure-data IR + topo sort + cycle detection + integration with garasu's headless GPU primitives."
homepage = "https://github.com/pleme-io/engawa"
repository = "https://github.com/pleme-io/engawa"
documentation = "https://docs.rs/engawa"
readme = "README.md"
categories = ["rendering", "graphics"]
keywords = ["wgpu", "render-graph", "shader", "effects", "pleme-io"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
