[package]
name = "engawa"
version = "0.1.3"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
authors = ["pleme-io"]
description = "Engawa (縁側) — typed render-graph IR for pleme-io GPU consumers. Bevy-inspired render-graph design distilled to mado-shaped needs: no ECS, no game loop, no asset pipeline. Pure-data IR + topo sort + cycle detection + integration with garasu's headless GPU primitives."
homepage = "https://github.com/pleme-io/engawa"
repository = "https://github.com/pleme-io/engawa"
documentation = "https://docs.rs/engawa"
readme = "README.md"
categories = ["rendering", "graphics"]
keywords = ["wgpu", "render-graph", "shader", "effects", "pleme-io"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Mechanical ALL registry for the decoration vocabulary enum — per
# the ★★ EMITTER SUBSTRATE rule, ALL is derived from the variants,
# never hand-listed (macro farm, tatara-rust-ast). Build-time-only
# proc-macro; the crate stays pure-data at runtime.
pleme-allvariants-derive = { version = "0.1", git = "https://github.com/pleme-io/pleme-allvariants-derive" }

[dev-dependencies]
serde_json = "1"
proptest = "1"
